tests/baselines/reference/arrowFunctionErrorSpan.errors.txt
tests/cases/compiler/arrowFunctionErrorSpan.ts(4,3): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(7,3): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(12,3): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(17,3): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(18,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/compiler/arrowFunctionErrorSpan.ts(21,3): error TS2345: Argument of type '(a: 任意, b: 任意, c: 任意, d: 任意) => 无值' is not assignable to parameter of type '() => 数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(28,7): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(32,7): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(36,7): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(43,5): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
  Type '无值' is not assignable to type '数字'.
tests/cases/compiler/arrowFunctionErrorSpan.ts(52,3): error TS2345: Argument of type '(_: 任意) => 数字' is not assignable to parameter of type '() => 数字'.


==== tests/cases/compiler/arrowFunctionErrorSpan.ts (11 errors) ====
    function f(a: () => number) { }
    
    // oneliner
    f(() => { });
      ~~~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
    // multiline, body
    f(() => {
      ~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
    });
    
    // multiline 2, body
    f(() => {
      ~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
    });
    
    // multiline 3, arrow on a new line
    f(()
      ~~
        => { });
    ~~~~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    
    // multiline 4, arguments
    f((a,
      ~~~
        b,
    ~~~~~~
        c,
    ~~~~~~
        d) => { });
    ~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(a: 任意, b: 任意, c: 任意, d: 任意) => 无值' is not assignable to parameter of type '() => 数字'.
    
    // single line with a comment
    f(/*
        */() => { });
          ~~~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
    // multi line with a comment
    f(/*
        */() => { });
          ~~~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
    // multi line with a comment 2
    f(/*
        */() => { 
          ~~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
        });
    
    // multi line with a comment 3
    f(  // comment 1
        // comment 2
        () =>
        ~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '() => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
        // comment 3
        {
            // comment 4
        }
        // comment 5
    ); 
    
    // body is not a block
    f(_ => 1 +
      ~~~~~~~~
        2);
    ~~~~~
!!! error TS2345: Argument of type '(_: 任意) => 数字' is not assignable to parameter of type '() => 数字'.
    